# bot-for-clients

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: tests.yml
freelancer_bot/: app.py  config.py  filters.py  formatting.py  sources.py
tests/: test_config.py  test_filters.py
